# shopee-scraper

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
