[project]
name = "shopee-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "browserforge>=1.2.4",
    "curl-cffi>=0.14.0",
    "flask>=3.1.3",
    "msgspec>=0.20.0",
    "patchright>=1.58.2",
    "playwright>=1.58.0",
    "scrapling>=0.4.3",
]
